--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+yapf = "^0.31.0"
+toml = "^0.10.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
