--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 authors = ["Cristóbal Tapia Camú <crtapia@gmail.com>"]
 readme = "README.md"
 repository = "https://github.com/cristobaltapia/pybaqus"
+build = 'build.py'
 
 [tool.poetry.dependencies]
 python = "^3.7.7"
@@ -20,8 +21,11 @@ pytest = "^5.2"
 yapf = "^0.31.0"
 toml = "^0.10.2"
 
+[tool.poetry.group.dev.dependencies]
+Cython = "^0.29.32"
+
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=0.12", "setuptools", "wheel", "Cython"]
 build-backend = "poetry.masonry.api"
 
 [tool.dephell.main]
