--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,28 @@
-[tool.poetry]
+[project]
 name = "pybaqus"
-version = "0.2.13"
-description = ""
-authors = ["Cristóbal Tapia Camú <crtapia@gmail.com>"]
+version = "0.1.0"
+description = "Add your description here"
 readme = "README.md"
-repository = "https://github.com/cristobaltapia/pybaqus"
+authors = [
+    { name = "Cristóbal Tapia Camú", email = "crtapia@gmail.com" } 
+]
+requires-python = ">=3.10"
+dependencies = [
+    "numpy>=2.1.2",
+    "pyvista>=0.44.1",
+    "scipy>=1.14.1",
+    "tqdm>=4.66.5",
+    "vtk>=9.3.1",
+]
 
-[tool.poetry.dependencies]
-python = "^3.7.7"
-numpy = "^1.18.2"
-scipy = "^1.4.1"
-matplotlib = "^3.2.1"
-pyvista = ">=0.37"
-vtk = "^9.0.3"
-tqdm = "^4.62.3"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-yapf = "^0.31.0"
-toml = "^0.10.2"
+[project.scripts]
+pybaqus = "pybaqus:main"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.dephell.main]
-from = {format = "poetry", path = "pyproject.toml"}
-to = {format = "setuppy", path = "setup.py"}
+[tool.uv]
+dev-dependencies = [
+    "pytest>=8.3.3",
+]
